--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                 <div class="card">
                     <h3>Community Outreach</h3>
                     <p>
-                        We facilitate free health screenings and medical gatherings in communities, 
+                        We facilitate free health screenings and medical gatherings in communities 
                         making healthcare more accessible to those who need it most.
                     </p>
                 </div>
