--- a/login.html
+++ b/login.html
@@ -97,7 +97,7 @@
             // Save user data
             saveUserData(userData);
             
-            // Show success message
+            // Show success messages
             showAlert('Login successful!', 'success');
             
             // Redirect to home page
