--- a/campaign-details.html
+++ b/campaign-details.html
@@ -30,7 +30,43 @@
 
     <!-- Footer -->
     <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>CancerCare</h3>
+                <p>Supporting cancer patients in Yaoundé through community-driven fundraising and health education.</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="campaigns.html">Active Campaigns</a></li>
+                    <li><a href="events.html">Health Events</a></li>
+                    <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Get Involved</h4>
+                <ul>
+                    <li><a href="create-account.html">Create Account</a></li>
+                    <li><a href="donate.html">Make a Donation</a></li>
+                    <li><a href="verification.html">Patient Verification</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p style="font-size: 0.9rem; margin: 0.5rem 0;">
+                    <strong>Phone:</strong><br>
+                    +237 680 480 725<br>
+                    +237 681 018 022
+                </p>
+                <p style="font-size: 0.9rem; margin-top: 1rem;">
+                    Available Monday - Friday, 8AM - 5PM
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
         <p>&copy; 2026 CancerCare Platform. Created by six students dedicated to helping cancer patients.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
@@ -78,12 +114,21 @@
             // Get stored patient photo from localStorage
             const storedPhoto = localStorage.getItem(`patientPhoto_${campaign.id}`);
 
+            // Format date
+            const createdDate = campaign.createdDate ? new Date(campaign.createdDate).toLocaleDateString() : 'N/A';
+
             // Display campaign details
             document.getElementById('campaignDetails').innerHTML = `
                 <h1 class="page-title">${campaign.patientName}</h1>
 
                 <div class="card">
-                    ${campaign.verified ? '<p style="color: #2ecc71; font-weight: bold;">Verified Patient</p>' : ''}
+                    ${campaign.verified ? '<p style="color: #2ecc71; font-weight: bold; margin: 0.5rem 0;">Verified Patient</p>' : ''}
+                    <p style="color: #666; font-size: 1rem; margin: 0.3rem 0;">
+                        <strong>Hospital:</strong> ${campaign.hospitalName || 'N/A'}
+                    </p>
+                    <p style="color: #666; font-size: 1rem; margin: 0.3rem 0;">
+                        <strong>Campaign Created:</strong> ${createdDate}
+                    </p>
 
                     <!-- Patient Photo Section with Upload -->
                     <div style="background-color: #f0f0f0; padding: 2rem; border-radius: 10px; text-align: center; margin: 1rem 0; position: relative;">
