--- a/about.html
+++ b/about.html
@@ -37,6 +37,13 @@
             justify-content: center;
             color: #666;
             font-size: 3rem;
+            overflow: hidden;
+        }
+
+        .team-member-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         
         .team-member h3 {
