--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="create-account.html">Create Account</a></li>
-            <li><a href="hospital-login.html" style="background-color: #e74c3c; padding: 0.5rem 1rem; border-radius: 5px;">Hospital Login</a></li>
+            <li><a href="hospital-login.html" style="background-color: rgba(255,255,255,0.2); padding: 0.5rem 1rem; border-radius: 5px; border: 1px solid white;">Hospital Login</a></li>
         </ul>
     </nav>
 
@@ -130,19 +130,25 @@
 
         <div class="team-grid">
             <div class="team-member">
-                <div class="team-member-photo">S1</div>
-                <h3>Student 1</h3>
-                <p>Project Lead & Developer</p>
+                <div class="team-member-photo">
+                    <img src="image/scrum master and data base developer.jpeg" alt="Scrum Master">
+                </div>
+                <h3>Scrum Master</h3>
+                <p>Scrum Master & Database Developer</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S2</div>
-                <h3>Student 2</h3>
-                <p>Frontend Developer</p>
+                <div class="team-member-photo">
+                    <img src="image/Task Manager.jpeg" alt="Task Manager">
+                </div>
+                <h3>Task Manager</h3>
+                <p>Task Manager & Project Coordinator</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S3</div>
-                <h3>Student 3</h3>
-                <p>Backend Developer</p>
+                <div class="team-member-photo">
+                    <img src="image/front end developer.jpeg" alt="Frontend Developer">
+                </div>
+                <h3>Frontend Developer</h3>
+                <p>Frontend Developer & UI Designer</p>
             </div>
             <div class="team-member">
                 <div class="team-member-photo">S4</div>
@@ -155,9 +161,11 @@
                 <p>Content Manager</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S6</div>
-                <h3>Student 6</h3>
-                <p>Community Outreach</p>
+                <div class="team-member-photo">
+                    <img src="image/product owner.jpeg" alt="Product Owner">
+                </div>
+                <h3>Product Owner</h3>
+                <p>Product Owner & Vision Lead</p>
             </div>
         </div>
 
@@ -209,8 +217,43 @@
 
     <!-- Footer -->
     <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>CancerCare</h3>
+                <p>Supporting cancer patients in Yaoundé through community-driven fundraising and health education.</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="campaigns.html">Active Campaigns</a></li>
+                    <li><a href="events.html">Health Events</a></li>
+                    <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Get Involved</h4>
+                <ul>
+                    <li><a href="create-account.html">Create Account</a></li>
+                    <li><a href="donate.html">Make a Donation</a></li>
+                    <li><a href="verification.html">Patient Verification</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p style="font-size: 0.9rem; margin: 0.5rem 0;">
+                    <strong>Phone:</strong><br>
+                    +237 680 480 725<br>
+                    +237 681 018 022
+                </p>
+                <p style="font-size: 0.9rem; margin-top: 1rem;">
+                    Available Monday - Friday, 8AM - 5PM
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
         <p>&copy; 2026 CancerCare Platform. Created by six students dedicated to helping cancer patients.</p>
-        <p>Contact us: info@cancercare.org | Phone: +237 XXX XXX XXX</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
