--- a/about.html
+++ b/about.html
@@ -151,14 +151,18 @@
                 <p>Frontend Developer & UI Designer</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S4</div>
-                <h3>Student 4</h3>
-                <p>UI/UX Designer</p>
+                <div class="team-member-photo">
+                    <img src="image/backend developer.jpeg" alt="Backend Developer">
+                </div>
+                <h3>Backend Developer</h3>
+                <p>Backend Developer</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S5</div>
-                <h3>Student 5</h3>
-                <p>Content Manager</p>
+                <div class="team-member-photo">
+                    <img src="image/BackendDevelper 2.jpeg" alt="Backend Developer 2">
+                </div>
+                <h3>Backend Developer 2</h3>
+                <p>Backend Developer & API Specialist</p>
             </div>
             <div class="team-member">
                 <div class="team-member-photo">
